// import { Column, CreateDateColumn, Entity, PrimaryGeneratedColumn } from 'typeorm';
//
// @Entity()
// export class Member_Login_Log {
//   @PrimaryGeneratedColumn({ type: 'bigint' })
//   id: number;
//
//   @Column({ length: 30 })
//   member_id: string;
//
//   @Column({ length: 30 })
//   c_ip: string;
//
//   @Column({ length: 1 })
//   c_mobile: string;
//
//   @Column({ length: 30 })
//   c_platform: string;
//
//   @Column({ length: 30 })
//   c_device: string;
//
//   @CreateDateColumn({ type: 'datetime' })
//   created_at: Date;
// }
